--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+LireMinInterieur 0.3
+====================
+
+* Problème avec la documentation du package réglé
+
+
 LireMinInterieur 0.2
 ====================
 
