règle le bug du path vers l'app shiny

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+LireMinInterieur 0.32
+=====================
+
+* Bug sur le path vers l'app shiny réglé (signalé par Frédérik Cassor). 
+
+
+
 LireMinInterieur 0.31
 =====================
 
